--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="metro-body">
             <h1>Metronome</h1>
-            <h3>Created by <a href="https://github.com/DKTOMZ" target="_blank">Dennis Tomno</a></h3>
+            <h3>Created by <a href="https://github.com/dtomno" target="_blank">Dennis Tomno</a></h3>
             <div class="BPM-display">
                 <div class="BPM" id="BPM">130</div>
                 <div class="BPM-text">BPM</div>
